Job Application for Senior Software Engineer, CORE Platform at HDS. Atlassian - Software Engineer, Data Platform. Software Engineer, Foundation Team - FullContact - Career Page. Lifesize, Inc. Careers - Senior Software Engineer (VoIP, Python). Job Application for Développeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI.       Junior Software Developer - Effectory     .       Senior Software Developer - Effectory     .       Software Developer - Effectory     . Job Application for Software Engineer - Frontend at LiveRamp. Job Application for Senior Software Engineer, Full Stack (DM) at LiveRamp. Software Developer | GENESYS Consulting Services, Inc.. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Software Engineer- Backend Python- Remote  at Fuze. Job Application for Software Engineer- Backend Python- Remote  at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer - Strategy Team at Truecaller. Splunk Careers - Senior Software Engineer in Test - Machine Learning. Jobvite, Inc. Careers - Senior Software Engineer. Lamudi - Senior Software Developer / PHP Developer. Lamudi - Mid Software Developer / PHP Developer. Job Application for Software Developer - Data Specialist at DRW . Job Application for Senior Software Engineer at InVision. Job Application for Fullstack Software Engineer at SevenRooms. Job Application for Sr. Software Engineer (React.js / Javascript) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC. J

--- a/software.html
+++ b/software.html
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/a2ea77e7-9517-4f2c-8a7d-bdb52ad1d119'>Lamudi - Mid Software Developer / PHP Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/lamudi/a2ea77e7-9517-4f2c-8a7d-bdb52ad1d119'>Lamudi - Mid Software Developer / PHP Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -281,9 +281,14 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/axon/be7c46b8-5d9f-4f72-9852-164781424bff'>Axon - Senior Embedded Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/be7c46b8-5d9f-4f72-9852-164781424bff'>Axon - Senior Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://encowayen.recruitee.com/o/senior-software-developer-c-fmd'>Senior Software Developer C# (f/m/d) - encoway-en</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... You will strengthen one of our development teams as a Software Developer. 
+Together with your team you design and develop a desktop application or a?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/fanatics/14de5045-66b9-4a81-b01e-38ceafb745f3'>Fanatics - Principal Software Engineer</a></h5> 
 <p><span class="badge badge-light">India, Hyderabad</span></p>
@@ -301,7 +306,7 @@
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=40647&localeCode=en-us&rssFeedId=2016383'>Staff Python Software Engineer - Sophia Antipolis Provence ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=40647&localeCode=en-us&rssFeedId=2016383'>Staff Python Software Engineer - Sophia Antipolis Provence ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... ... 2019 Performance and modelling internship - 5-6 months Sophia Antipolis; 
 Assistant Operations Analyst Sophia Antipolis; Chip Package Codesign Engineer
@@ -319,7 +324,7 @@ Assistant Operations Analyst Sophia Antipolis; Chip Package Codesign Engineer
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369773002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369773002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -399,7 +404,7 @@ talented software engineers in implementing, configuring, and customizing our?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -415,7 +420,7 @@ talented software engineers in implementing, configuring, and customizing our?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/sr-software-engineer-central-tech-4036'>Sr. Software Engineer - Central Tech -  Activision Careers</a></h5> 
+<h5><a href='https://activision.referrals.selectminds.com/jobs/sr-software-engineer-central-tech-4036'>Sr. Software Engineer - Central Tech -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -424,7 +429,7 @@ talented software engineers in implementing, configuring, and customizing our?..
 <p>5 days ago ... About Ivalua. Headquartered in the heart of the Silicon Valley, Ivalua is the 
 leading provider of Spend Management Cloud Solutions and recognized by top?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1776018'>Job Application for Software Engineer at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1776018'>Job Application for Software Engineer at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
@@ -445,7 +450,7 @@ automate systems within the ITIL framework. This role will either assist cross?.
 optimizing our data pipeline. The ideal candidate is an experienced data pipeline
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Carousell is one of the world's largest and fastest growing mobile classifieds 
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
@@ -456,11 +461,6 @@ over?...</p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
 modern?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1732744?gh_jid=1732744'>Job Application for Staff Software Engineer - Simulation at Cruise</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... We're looking for software engineering professionals with deep strengths in 
-developing highly performant, highly available software written in modern C++.</p>
 <hr/>
 
 
