--- a/project-manager.html
+++ b/project-manager.html
@@ -244,7 +244,7 @@ today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Material Program Manager at pony.ai.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pixelogicmedia.workable.com/jobs/1075877'>Project Manager (Japanese ... - Pixelogic Media Partners, LLC - Jobs</a></h5> 
+<h5><a href='https://pixelogicmedia.workable.com/jobs/1075877'>Project Manager (Japanese ... - Pixelogic Media Partners, LLC - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Project Manager (Japanese Speaker) at Pixelogic 
 Media Partners, LLC.</p>
@@ -261,7 +261,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -300,7 +300,7 @@ ups,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/tax-client-technology-project-manager-90472'>Tax Client Technology Project Manager - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/tax-client-technology-project-manager-90472'>Tax Client Technology Project Manager - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Senior Solution Architect. Australia. Core Business Services. Requisition #: 
 AUS001HI. Solution Platform Engineer. Australia. Core Business Services.</p>
@@ -430,7 +430,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692410600-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692410600-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -442,7 +442,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
